make ccmb-workflow build automatically

--- a/configuration/configuration-as-code.yaml
+++ b/configuration/configuration-as-code.yaml
@@ -105,7 +105,7 @@ jobs:
 
               // Filter by name (with regular expression)
               traits << 'jenkins.scm.impl.trait.RegexSCMSourceFilterTrait' {
-                  regex('(jenkins-poc|none)')
+                  regex('(jenkins-poc|ccmb-workflow)')
               }
 
               // Discover pull requests from origin
