--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 version: '3.2'
+
+networks:
+  wirehole_private_network:
+    external: true
+
+
 services:
   relay:
     container_name: webhookrelay
@@ -15,7 +21,7 @@ services:
     image: williamjds/ccmb-jenkins:latest
     restart: always
     ports:
-      - 8080:8080
+      - 80:8080
       - 50000:50000
     environment:
       # in docker compose the containers are on the same network and can be addressed by their names as hostname: configuration-server
@@ -28,5 +34,8 @@ services:
       - GITHUB_ACCOUNT_PASSWORD=${GITHUB_ACCOUNT_PASSWORD}
       - GITHUB_WEBHOOK_SECRET=${GITHUB_WEBHOOK_SECRET}
     volumes:
-      - /tmp/jenkins_data:/var/jenkins_home
+      - ./jenkins_data:/var/jenkins_home
       - ./configuration:/usr/local/configuration
+    networks:
+      wirehole_private_network:
+        ipv4_address: 10.2.0.33
