--- a/configuration/configuration-as-code.yaml
+++ b/configuration/configuration-as-code.yaml
@@ -44,7 +44,7 @@ credentials:
 
 unclassified:
   location:
-    url: http://localhost:8080/
+    url: https://jenkins.localhost/
 
 jobs:
   - script: >
